{{$NEXT}}

1.55   2021-12-23

- Another documentation fix release. This fixes some mistakes, fixes some
  broken links, and removes all references to the long-dead datetime.perl.org
  site.


1.54   2020-12-04

- This release contains a lot of small documentation revisions, both to
  formatting and content.


1.53   2020-11-08

- Added a $dt->rfc3339 method. Based on discussion in GH #109 by worthmine.


1.52   2020-02-29

- Added a $dt->is_between($dt1, $dt2) method. Based on GH #97 by philip r
  brenan.

- Simplify the calculation of leap seconds in XS. This is a little more
  efficient for most use cases (anything with future or recent past
  datetimes). Contributed by Mark Overmeer. GH #91.


1.51   2019-04-21

- Fix CLDR formatting of 'S' pattern with more than 9 digits of
  precision. While we only store nanoseconds in the DateTime object we should
  still be able to handle an arbitrary number of digits properly. Fixed by
  Slaven Rezić. GH #89.


1.50   2018-08-01

- The %F strftime pattern incorrectly zero-padded numbers less than four
  digits. According to POSIX::strftime, this should output the year as-is
  without padding. Reported by Andy Lester. GH #83.


1.49   2018-05-20

- Updated the ppport.h with the latest version of Devel::PPPort. This fixes a
  compilation warning when compiling with 5.27.11. Reported by Jim
  Keenan. Fixed GH #81.


1.48   2018-03-26

- The last release would die if Sub::Util was not available, but this should
  just be an optional requirement. Fixed by Paul Howarth. Fixes GH #77. PR
  #78.


1.47   2018-03-25

- DateTime::Duration->multiply now only allows integer
  multipliers. Implemented by Dan Stewart. PR #73.

- Added is_last_day_of_quarter() and is_last_day_of_year()
  methods. Implemented by Dan Stewart. PR #72.

- When an exception was thrown while adding a duration the object could be
  left in a broken state, with the duration partially applied. Subsequent